# brutalist-twitter

./: Cargo.toml  schema.sql
src/: app.rs  lib.rs  main.rs
src/controllers/: mod.rs  pages.rs  tweets.rs  users.rs
src/models/: follows.rs  likes.rs  mod.rs  retweets.rs  sessions.rs  tweets.rs  users.rs
templates/: base.html  create_tweet.html  feed.html  home.html  navbar.html  reply.html  signin.html  signup.html  single_tweet.html  tweet.html  user.html
