[package]
name = "brutalist-twitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.1"
askama = "0.11.1"
chrono = "0.4.22"
env_logger = "0.9.1"
form_urlencoded = "1.1.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
sha2 = "0.10.6"
shuttle-aws-rds = { version = "0.7.2", features = ["postgres"] }
shuttle-service = { version = "0.7.2", features = ["web-thruster"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
thruster = { version = "1.3.0", features = ["hyper_server"] }
tokio = { version = "1.20.1", features = ["macros"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }
